@@ -56,73 +56,6 @@ def install(self, reinstall=False):
         addTool('FSDFacultyStaffDirectoryTool')
 
     #####
-    # Catalog Manipulations
-    #  These could be places in a catalog.xml GenericSetup step, but doing so would
-    #  mean that the added indexes would be deleted each time we re-install.  This
-    #  would slow down reinstalls unacceptably.  Leave this code here in install.py
-    catalogTool = getToolByName(self, 'portal_catalog')
-    
-    # Add indexes if they don't exist:
-    for indexName, indexType in ADDITIONAL_CATALOG_INDEXES:
-        if indexName not in catalogTool.indexes():
-             catalogTool.addIndex(indexName, indexType)
-
-    # Add metadata fields if they don't exist:
-    for fieldName in ADDITIONAL_CATALOG_METADATA:
-        if fieldName not in catalogTool.schema():
-            catalogTool.addColumn(fieldName)    
-            
-    # Since our content types don't exist on first install, there's nothing to index
-    # And even then, we only need to update the FSD objects
-    # But then again, if we do an uninstall/install, we need to do this. Let's just do it 
-    # all the time since it won't find anything on first installation anyway.
-    indexes = [indexName for indexName, indexType in ADDITIONAL_CATALOG_INDEXES]
-    FSDTypes = [t['meta_type'] for t in listTypes(PROJECTNAME)]
-    for brain in catalogTool(portal_type=FSDTypes):
-        try:
-            brain.getObject().reindexObject(indexes)
-        except KeyError:
-            # Relations content objects seem to not be able to handle getObject(), 
-            # but the data doesn't seem to get lost, so just ignore it.
-            pass
-    #####
-    # Smart Folder Manipulations
-    #  These could be places in a catalog.xml GenericSetup step, but doing so would
-    #  mean that the added indexes would be deleted each time we re-install.  This
-    #  would slow down reinstalls unacceptably.  Leave this code here in install.py
-    
-    # Set up SmartFolder/Topic/Collection fields:
-    smart_folder_tool = getToolByName(self, 'portal_atct')           
-    
-    # add smart folder indexes if needed
-    def addSmartFolderIndex(indexName, friendlyName, description, criteria):
-        try:
-            smart_folder_tool.removeIndex(indexName)
-        except:
-            pass
-        smart_folder_tool.addIndex(indexName, friendlyName, description, enabled=True, criteria=criteria)
-    
-    addSmartFolderIndex("getRawClassifications", "Classification", "The classification assigned to a person", criteria=['ATReferenceCriterion'])
-    addSmartFolderIndex("getRawSpecialties", "Specialty", "A person's listed specialty areas", criteria=['ATReferenceCriterion'])
-    addSmartFolderIndex("getRawCommittees", "Committee", "A person's listed committees", criteria=['ATReferenceCriterion'])
-    addSmartFolderIndex("getRawPeople", "People", "The people assigned to a person grouping (ie committee, department, specialty, classification)", criteria=['ATReferenceCriterion'])
-    addSmartFolderIndex("getRawDepartments", "Department", "The departments assigned to a person", criteria=['ATReferenceCriterion'])
-    addSmartFolderIndex("getSortableName", "Full Name", "The person's name, last name first", criteria=['ATListCriterion'])
-    
-    def addSmartFolderMetadata(columnName, friendlyName, description, enabled):
-        try:
-            smart_folder_tool.removeMetadata(columnName)
-        except:
-            pass
-        smart_folder_tool.addMetadata(columnName, friendlyName, description, enabled=True)
-    
-    addSmartFolderMetadata("getCommitteeNames", "Committees", "The committees with which the person is associated", enabled=True)
-    addSmartFolderMetadata("getDepartmentNames", "Departments", "The departments with which the person is associated", enabled=True)
-    addSmartFolderMetadata("getSpecialtyNames", "Specialties", "The specialties with which the person is associated", enabled=True)
-    addSmartFolderMetadata("getClassificationNames", "Classifications", "The classifications with which the person is associated", enabled=True)
-    addSmartFolderMetadata("getResearchTopics", "Research Topics", "The research topics with which the person is associated", enabled=True)
-    
-    #####
     # Action Manipulations
     #   These should probably also live in GS profiles, eventually.  Move them there if possible
     #   This should be movable after we drop support for plone 2.5
