@@ -1,0 +1,26 @@
+<?xml version="1.0"?>
+<object name="portal_catalog" meta_type="Plone Catalog Tool">
+  <index name="getSortableName" meta_type="FieldIndex">
+    <indexed_attr value="getSortableName" />
+  </index>
+  <index name="getRawClassifications" meta_type="KeywordIndex">
+    <indexed_attr value="getRawClassifications" />
+  </index>
+  <index name="getRawSpecialties" meta_type="KeywordIndex">
+    <indexed_attr value="getRawSpecialties" />
+  </index>
+  <index name="getRawCommittees" meta_type="KeywordIndex">
+    <indexed_attr value="getRawCommittees" />
+  </index>
+  <index name="getRawDepartments" meta_type="KeywordIndex">
+    <indexed_attr value="getRawDepartments" />
+  </index>
+  <index name="getRawPeople" meta_type="KeywordIndex">
+    <indexed_attr value="getRawPeople" />
+  </index>
+  <column value="getCommitteeNames" />
+  <column value="getDepartmentNames" />
+  <column value="getSpecialtyNames" />
+  <column value="getClassificationNames" />
+  <column value="getResearchTopics" />
+</object>
