@@ -1,0 +1,51 @@
+<?xml version="1.0"?>
+<atcttool>
+ <topic_indexes>
+  <index name="getRawClassifications"
+     description="The classification assigned to a person" enabled="True"
+     friendlyName="Classification">
+   <criteria>ATReferenceCriterion</criteria>
+  </index>
+  <index name="getRawCommittees" description="A person's listed committees"
+     enabled="True" friendlyName="Committee">
+   <criteria>ATReferenceCriterion</criteria>
+  </index>
+  <index name="getRawDepartments"
+     description="The departments assigned to a person" enabled="True"
+     friendlyName="Department">
+   <criteria>ATReferenceCriterion</criteria>
+  </index>
+  <index name="getRawPeople"
+     description="The people assigned to a person grouping (ie committee, department, specialty, classification)"
+     enabled="True" friendlyName="People">
+   <criteria>ATReferenceCriterion</criteria>
+  </index>
+  <index name="getRawSpecialties"
+     description="A person's listed specialty areas" enabled="True"
+     friendlyName="Specialty">
+   <criteria>ATReferenceCriterion</criteria>
+  </index>
+  <index name="getSortableName"
+     description="The person's name, last name first" enabled="True"
+     friendlyName="Full Name">
+   <criteria>ATListCriterion</criteria>
+  </index>
+ </topic_indexes>
+ <topic_metadata>
+  <metadata name="getClassificationNames"
+     description="The classifications with which the person is associated"
+     enabled="True" friendlyName="Classifications"/>
+  <metadata name="getCommitteeNames"
+     description="The committees with which the person is associated"
+     enabled="True" friendlyName="Committees"/>
+  <metadata name="getDepartmentNames"
+     description="The departments with which the person is associated"
+     enabled="True" friendlyName="Departments"/>
+  <metadata name="getResearchTopics"
+     description="The research topics with which the person is associated"
+     enabled="True" friendlyName="Research Topics"/>
+  <metadata name="getSpecialtyNames"
+     description="The specialties with which the person is associated"
+     enabled="True" friendlyName="Specialties"/>
+ </topic_metadata>
+</atcttool>
